[package]
name = "smelly_packs"
version = "0.1.0"
authors = ["Areeb Abubaker"]
edition = "2021"















# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pcap = "1.0.0"
etherparse = "0.12.0"
online = "4.0.0"
libc = "0.2.92"
#libpcap = "0.1.7"
